2003-10-29  Kevin Layer  <layer@crikey>

--- a/Makefile.macosx
+++ b/Makefile.macosx
@@ -1,4 +1,4 @@
-# $Id: Makefile.macosx,v 1.1.2.3.6.2 2003/01/13 18:15:17 layer Exp $
+# $Id: Makefile.macosx,v 1.1.2.3.6.3 2003/10/29 18:35:23 layer Exp $
 #
 #  Makefile.macosx for CLIM 2.0
 #
@@ -13,17 +13,17 @@ SHARED-OL-OBJS= climol.dylib
 Makefile=Makefile.macosx
 
 SET_LIBRARY_PATH = \
-  DYLD_LIBRARY_PATH=/usr/local/lib:/usr/local/X11R6/lib:/lib:/usr/lib:$(DYLD_LIBRARY_PATH); \
+  DYLD_LIBRARY_PATH=/usr/local/lib:/usr/X11R6/lib:/lib:/usr/lib:$(DYLD_LIBRARY_PATH); \
   export DYLD_LIBRARY_PATH
 
 #CL=../src/xm-dcl
 
-TKLIB=-lXm
-XTLIB=-L/usr/local/X11R6/lib -lXt
-XLIB=-L/usr/local/X11R6/lib -lX11
+TKLIB=-L/usr/local/motif/lib -lXm
+XTLIB=-L/usr/X11R6/lib -lXt
+XLIB=-L/usr/X11R6/lib -lX11
 # removed /usr/local/lib/liblanginfo.a from XLIB
 
-XINCLUDES=-I/usr/local/X11R6/include
+XINCLUDES=-I/usr/X11R6/include -I/usr/local/motif/include
 
 CFLAGS= 
 PICFLAGS = 
