--- a/Makefile.macosx
+++ b/Makefile.macosx
@@ -1,4 +1,4 @@
-# $Id: Makefile.macosx,v 1.3 2003/01/15 04:51:07 layer Exp $
+# $Id: Makefile.macosx,v 1.4 2003/12/12 05:33:28 layer Exp $
 #
 #  Makefile.macosx for CLIM 2.0
 #
@@ -12,18 +12,19 @@ SHARED-OL-OBJS= climol.dylib
 
 Makefile=Makefile.macosx
 
+# removed /usr/local/lib:
 SET_LIBRARY_PATH = \
-  DYLD_LIBRARY_PATH=/usr/local/lib:/usr/local/X11R6/lib:/lib:/usr/lib:$(DYLD_LIBRARY_PATH); \
+  DYLD_LIBRARY_PATH=/usr/X11R6/lib:/lib:/usr/lib:$(DYLD_LIBRARY_PATH); \
   export DYLD_LIBRARY_PATH
 
 #CL=../src/xm-dcl
 
-TKLIB=-lXm
-XTLIB=-L/usr/local/X11R6/lib -lXt
-XLIB=-L/usr/local/X11R6/lib -lX11
+TKLIB=-L/usr/local/motif/lib -lXm
+XTLIB=-L/usr/X11R6/lib -lXt
+XLIB=-L/usr/X11R6/lib -lX11
 # removed /usr/local/lib/liblanginfo.a from XLIB
 
-XINCLUDES=-I/usr/local/X11R6/include
+XINCLUDES=-I/usr/X11R6/include -I/usr/local/motif/include
 
 CFLAGS= 
 PICFLAGS = 
