--- a/Makefile.rs6000
+++ b/Makefile.rs6000
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 2.4 2003/12/15 18:35:11 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 2.5 2004/03/11 02:13:07 layer Exp $
 #
 #  Makefile.rs6000 for CLIM 2.0
 #
@@ -8,36 +8,18 @@ include Makefile.defs
 Makefile=Makefile.rs6000
 
 ## For info on Motif1.2 vs Motif 2.1, see /usr/lpp/X11/README
-##
 
-CFLAGS	= -O -D_BSD -I/usr/include/Motif1.2 /usr/lpp/X11/lib/R6/Motif1.2/Xm12.imp /usr/lpp/X11/lib/R6/Motif1.2/Mrm12.imp
+CFLAGS	= -O -D_BSD -I/usr/include/Motif2.1
 
-### the R5 directory contains Motif 1.2 on loveshaq
-### -- what a botch.  Can't use the latest X11 just because we want
-###    to use an older Motif!  How I love AIX.... not!
 SET_LIBRARY_PATH= \
-  LIBPATH=/usr/lpp/X11/lib/R5:/lib:/usr/lib; export LIBPATH; env
+  LIBPATH=/usr/lpp/X11/lib/R6:/lib:/usr/lib; export LIBPATH; env
 
-TKLIB=-L/usr/lpp/X11/lib/R5 -lXm
-
-## removed: -D_NO_PROTO -D_NONSTD_TYPES -D_MBI=void
-#CFLAGS	= -O -D_BSD
-#	-I/usr/include/Motif1.2
-#        /usr/lpp/X11/lib/R6/Motif1.2/Xm12.imp
-#        /usr/lpp/X11/lib/R6/Motif1.2/Mrm12.imp
-
-### the R5 directory contains Motif 1.2 on loveshaq
-### -- what a botch.  Can't use the latest X11 just because we want
-###    to use an older Motif!  How I love AIX.... not!
-#SET_LIBRARY_PATH= \
-#  LIBPATH=/usr/lpp/X11/lib/R5:/lib:/usr/lib; export LIBPATH; env
-
-#TKLIB=-L/usr/lpp/X11/lib/R5 -lXm
+TKLIB=-L/usr/lpp/X11/lib/R6 -lXm
 
 XTLIB=-lXt
 XLIB=-lX11
 
-XINCLUDES= -I/usr/include/Motif1.2 /usr/lpp/X11/lib/R6/Motif1.2/Xm12.imp
+XINCLUDES= -I/usr/include/Motif2.1
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 MAKE_SHARED = sh ../src/bin/make_shared.ibm -make_exp ../src/bin/make_exp
