--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -1,4 +1,4 @@
-# $Id: Makefile.wnn,v 2.4 2003/12/15 18:35:11 layer Exp $
+# $Id: Makefile.wnn,v 2.5 2004/03/11 02:13:07 layer Exp $
 #
 #  Makefile.wnn for CLIM 2.0
 #
@@ -98,6 +98,10 @@ endif
 endif
 
 ifeq ($(OS_NAME),freebsd)
+REDHATLIBS = -lcrypt
+endif
+
+ifeq ($(MACHINE),x86_64)
 REDHATLIBS = -lcrypt
 endif
 
