--- a/Makefile.macosx
+++ b/Makefile.macosx
@@ -13,18 +13,16 @@ SHARED-OL-OBJS= climol.dylib
 Makefile=Makefile.macosx
 
 # removed /usr/local/lib:
-SET_LIBRARY_PATH = \
-  DYLD_LIBRARY_PATH=/opt/local/lib:/usr/X11R6/lib:/lib:/usr/lib:$(DYLD_LIBRARY_PATH); \
-  export DYLD_LIBRARY_PATH
+SET_LIBRARY_PATH = 
 
 #CL=../src/xm-dcl
 
-TKLIB=-L/opt/local/lib -L/usr/local/motif/lib -lXm -lpng12
+TKLIB=-L/usr/local/motif/lib -lXm
 XTLIB=-L/usr/X11R6/lib -lXt
 XLIB=-L/usr/X11R6/lib -lX11
 # removed /usr/local/lib/liblanginfo.a from XLIB
 
-XINCLUDES=-I/usr/X11R6/include -I/usr/local/motif/include -I/opt/local/include -I/opt/local/include/X11
+XINCLUDES=-I/usr/X11R6/include -I/usr/local/motif/include
 
 ifeq ($(SIXTYFOURBIT),yes)
 CFLAGS= -arch ppc64 -DAcl64Bit
