Make clim load Motif from known locations on OS X.
Since the OS X linker hard-codes libraries into climxm.dylib, users had to
install Motif in exactly the same places we had it when we built CLIM. Now,
use the (OS X-only) linker flag -weak-l to link climxm.dylib weakly against
these libraries, and preload them from known locations on startup (sys::*clim-library-search-path*).

This means that now, users can install Motif from source (like they were used
to), or through Homebrew or MacPorts, without having to to worry if CLIM will
load.

This change also changes the build process to no longer use make_shared.mac
[64], and instead uses ld directly, and re-adds /usr/local/{lib,include} to
include and library search paths.

--- a/Makefile.macosx
+++ b/Makefile.macosx
@@ -17,29 +17,35 @@ SET_LIBRARY_PATH =
 
 #CL=../src/xm-dcl
 
-TKLIB=-L/opt/local/lib -lXm
-XTLIB=-L/usr/X11R6/lib -lXt
-XLIB=-L/usr/X11R6/lib -lX11
-# removed /usr/local/lib/liblanginfo.a from XLIB
+# Since the linker hard-codes the truenames of these libraries and
+# loading climxm.dylib fails when users attempt to load it with the
+# files missing, we use -weak-l and preload the libraries (see
+# tk/load-xm.lisp):
+TKLIB=-L/opt/local/lib -L/usr/local/lib -weak-lXm
+XTLIB=-L/usr/X11/lib -weak-lXt
+XLIB=-weak-lX11
 
-XINCLUDES=-I/usr/X11R6/include -I/opt/local/include
+XINCLUDES=-I/usr/X11R6/include -I/opt/local/include -I/usr/local/include
 
 ifeq ($(SIXTYFOURBIT),yes)
 CFLAGS = -arch x86_64 -DAcl64Bit
-MAKE_SHARED = sh ../src/bin/make_shared.mac64
+MAKE_SHARED = ld -arch x86_64 -bundle /usr/lib/bundle1.o -force_cpusubtype_ALL -flat_namespace
 else
 ifeq ($(MACHINE),x86)
 CFLAGS= -arch i386
-MAKE_SHARED = sh ../src/bin/make_shared.mac86
+MAKE_SHARED = ld -arch i386 -bundle /usr/lib/bundle1.o -force_cpusubtype_ALL -flat_namespace
 else
 CFLAGS= 
-MAKE_SHARED = sh ../src/bin/make_shared.mac
+MAKE_SHARED = ld -bundle /usr/lib/bundle1.o -force_cpusubtype_ALL -flat_namespace
 endif
 endif
 
 PICFLAGS = 
 SHAREFLAGS = 
 AR = ar cq
+
+# Make sure the wnn build is happy:
+REDHATLIBS = -lc
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
