bug21195: conditionalize location of Motif
Change-Id: Ib876705484152906d22029e87e3e37c667babab8

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,10 +1,15 @@
-# $Id: Makefile.linux,v 2.5 2004/02/13 05:35:19 layer Exp $
 
 include Makefile.defs
 
 Makefile=Makefile.linux
 
-XINCLUDES=-I/usr/X11R6/include
+ifeq ($(shell if test -d /usr/include/openmotif; then echo yes; fi),yes)
+XINCLUDES = -I/usr/include/openmotif
+XLIB      = /usr/lib/openmotif
+endif
+
+XINCLUDES ?= /usr/X11R6/include
+XLIB      ?= /usr/X11R6/lib
 
 TKLIB=-lXm -lXpm -lXext -lXp
 XTLIB=-lXt
@@ -17,7 +22,7 @@ else
 THREADLIB = -lpthread
 endif
 
-SET_LIBRARY_PATH = LD_RUN_PATH=/usr/X11R6/lib:/lib:/usr/lib; export LD_RUN_PATH
+SET_LIBRARY_PATH = LD_RUN_PATH=$(XLIB):/lib:/usr/lib; export LD_RUN_PATH
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
@@ -25,7 +30,7 @@ PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
 #PICFLAGS = -K pic
 SHAREFLAGS = 
-MAKE_SHARED = ld -shared -L/usr/X11R6/lib
+MAKE_SHARED = ld -shared -L$(XLIB)
 STD_DEFINES = -DSVR4 -DSYSV
 AR = ar cq
 
