Fix include/lib path for Linux.
/usr/X11R6/ isn't used anymore, so update to use /usr/include and
/usr/lib.

Change-Id: I8bfb949b185354b06db299a920428dd35cff0572

--- a/Makefile.amd64
+++ b/Makefile.amd64
@@ -8,8 +8,14 @@ XINCLUDES = -I/usr/include/openmotif
 XLIBDIR  = /usr/lib64/openmotif
 endif
 
-XINCLUDES ?= /usr/X11R6/include
-XLIBDIR  ?= /usr/X11R6/lib64
+# This is the old location, but include it here, just in case 
+ifeq ($(shell if test -d /usr/X11R6/include; then echo yes; fi),yes)
+XINCLUDES = -I/usr/X11R6/include
+XLIBDIR   = /usr/X11R6/lib
+endif
+
+XINCLUDES ?= /usr/include
+XLIBDIR  ?= /usr/lib64
 
 TKLIB=-lXm -lXpm -lXext -lXp
 XTLIB=-lXt
