--- a/Makefile.linux
+++ b/Makefile.linux
@@ -8,8 +8,14 @@ XINCLUDES = -I/usr/include/openmotif
 XLIBDIR   = /usr/lib/openmotif
 endif
 
-XINCLUDES ?= /usr/X11R6/include
-XLIBDIR   ?= /usr/X11R6/lib
+# This is the old location, but include it here, just in case 
+ifeq ($(shell if test -d /usr/X11R6/include; then echo yes; fi),yes)
+XINCLUDES = -I/usr/X11R6/include
+XLIBDIR   = /usr/X11R6/lib
+endif
+
+XINCLUDES ?= /usr/include
+XLIBDIR   ?= /usr/lib
 
 TKLIB=-lXm -lXpm -lXext -lXp
 XTLIB=-lXt
