runlisp.sh requires bash now
Change-Id: Iaadcb4787952d2cd0ceaec7da755db9c51539012

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -38,7 +38,7 @@ compile: FORCE $(PRODUCT-OBJS) $(ICS-PRODUCT-OBJS) $(compile_depends)
 	echo '(compile-it (quote $(SYSTEM)))' >> build.tmp
 	echo '(exit 0)' >> build.tmp
 	(eval '$(SET_LIBRARY_PATH)'; \
-	 sh ../src/runlisp.sh -f build.tmp $(build_runlisp_args) \
+	 bash ../src/runlisp.sh -f build.tmp $(build_runlisp_args) \
 	 $(CL) $(CLOPTS))
 
 # Concatenation
@@ -50,7 +50,7 @@ cat: compile
 	echo '(concatenate-it (quote $(SYSTEM)))' >> cat.tmp
 	echo '(exit 0)' >> cat.tmp
 	(eval '$(SET_LIBRARY_PATH)'; \
-	 sh ../src/runlisp.sh -f cat.tmp $(concat_runlisp_args) \
+	 bash ../src/runlisp.sh -f cat.tmp $(concat_runlisp_args) \
 	 $(CL) $(CLOPTS))
 	ls -lt $(PRODUCT-FASLS) $(ICS-PRODUCT_FASLS) >> Clim-sizes.n
 	ls -lt $(PRODUCT-FASLS) $(ICS-PRODUCT_FASLS)
