--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -108,11 +108,15 @@ ifeq ($(OS_NAME),freebsd)
 REDHATLIBS = -lcrypt
 endif
 
-ifeq ($(MACHINE),x86_64)
 ifeq ($(OS_NAME),linux)
+ifeq ($(MACHINE),x86_64)
+REDHATLIBS = -lcrypt
+endif
+ifeq ($(MACHINE),arm64)
 REDHATLIBS = -lcrypt
 endif
 endif
+
 
 wnn.$(SHARED_EXT): $(WNN_OBJS)
 	$(MAKE_SHARED) $(SHAREFLAGS) -o wnn.$(SHARED_EXT) $(WNN_OBJS) \
