rfe16236: wnn.so build needs -lcrypt on 32-bit Linux
Not sure how this got dropped, but there was no conditional for 32-bit
Linux to include -lcrypt.

%Testing: src ../clim2 && make clean && make

Change-Id: If8837aa6b6a0c2846c61f2c60063ad02f41c01fc
Reviewed-on: https://gerrit.franz.com:9080/14259
Reviewed-by: Kevin Layer <layer@franz.com>
Tested-by: Kevin Layer <layer@franz.com>

--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -111,6 +111,9 @@ ifeq ($(OS_NAME),linux)
 ifeq ($(MACHINE),x86_64)
 REDHATLIBS = -lcrypt
 endif
+ifeq ($(MACHINE),x86)
+REDHATLIBS = -lcrypt
+endif
 ifeq ($(MACHINE),arm64)
 REDHATLIBS = -lcrypt -lrt -lm -ldl -lc
 endif
