rfe16976: port clim back into the source system
Remove patch loading.

Add with-unreachable-code-allowed where needed.

Add Makefile.macarm

adjust make scripts to build all non-smp platforms.

Change-Id: I66a3829227d7aa2bc693c1194c5c9529e2d7dc00
Reviewed-on: https://gerrit.franz.com:9080/c/clim2/+/21476
Reviewed-by: Duane Rettig <duane@franz.com>
Reviewed-by: Kevin Layer <layer@franz.com>
Tested-by: Kevin Layer <layer@franz.com>

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -25,6 +25,7 @@ compile: FORCE $(PRODUCT-OBJS) $(ICS-PRODUCT-OBJS) $(compile_depends)
 	echo '(setq *compile-print* $(compile_print))' >> build.tmp
 	echo '(setq *compile-verbose* $(compile_verbose))' >> build.tmp
 	echo '(setq excl::*warn-smp-usage* nil)' >> build.tmp
+	echo '(setq excl::*unreachable-code-warns* nil)' >> build.tmp
 	echo '(setq excl:*redefinition-warnings* $(redef_warning))' >> build.tmp
 	echo '(setq excl:*record-source-file-info* $(RECORD_SOURCE_FILE_INFO))' >> build.tmp
 	echo '(setq comp:save-local-names-switch $(SAVE_LOCAL_NAMES))' >> build.tmp
