--- a/Makefile.macarm
+++ b/Makefile.macarm
@@ -1,5 +1,5 @@
 #
-#  Makefile.macosx for CLIM 2.0
+#  Makefile.macarm for CLIM 2.0
 #
 
 include Makefile.defs
@@ -29,8 +29,8 @@ XLIB=-weak-lX11
 
 XINCLUDES= -I$(XBASE)/include -I$(XTBASE)/include -I$(MOTIFBASE)/include
 
-CFLAGS = -m64 -arch x86_64 -DAcl64Bit -dynamiclib -flat_namespace -single_module -Wl,-no_adhoc_codesign -Wl,-macosx_version_min,12.0 -Wno-implicit-function-declaration
-MAKE_SHARED = cc -arch x86_64 -bundle -force_cpusubtype_ALL -flat_namespace -Wl,-macosx_version_min,12.0
+CFLAGS = -m64 -arch arm64 -DAcl64Bit -dynamiclib -flat_namespace -single_module -DMACM1 -Wl,-no_adhoc_codesign -Wl,-macosx_version_min,12.0 -Wno-implicit-function-declaration
+MAKE_SHARED = cc -arch arm64 -bundle -force_cpusubtype_ALL -flat_namespace -Wl,-macosx_version_min,12.0
 
 PICFLAGS = 
 SHAREFLAGS = 
