codesign shared libraries on macOS
The notarization that happens requires codesigned binaries.

Change-Id: I93c00bf461cc8ff380fc5a0ce35e04cf842f72c9
Reviewed-on: https://gerrit.franz.com:9080/c/clim2/+/21484
Tested-by: Kevin Layer <layer@franz.com>
Reviewed-by: Kevin Layer <layer@franz.com>

--- a/Makefile.cobjs
+++ b/Makefile.cobjs
@@ -54,6 +54,9 @@ climxm.$(SHARED_EXT): xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
 	$(MAKE_SHARED) $(SHAREFLAGS) -o climxm.$(SHARED_EXT) \
 		xlibsupport.o xtsupport.o xmsupport.o $(THREADLIB) \
 		$(IMPORTS) $(TKLIB) $(XTLIB) $(XLIB) $(MOTIFXTRAS))
+ifdef CODESIGN
+	../src/scm-bin/ficodesign climxm.$(SHARED_EXT)
+endif
 
 # climxm.sl: xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
 # 	(eval '$(SET_LIBRARY_PATH)' ; \
@@ -66,6 +69,9 @@ climol.$(SHARED_EXT): xlibsupport.o xtsupport.o olsupport.o $(IMPORTS)
 	$(MAKE_SHARED) $(SHAREFLAGS) -o climol.$(SHARED_EXT) \
 		xlibsupport.o xtsupport.o olsupport.o \
 		$(IMPORTS) $(TKLIB) $(XTLIB) $(XLIB))
+ifdef CODESIGN
+	../src/scm-bin/ficodesign climol.$(SHARED_EXT)
+endif
 
 # climol.sl: xlibsupport.o xtsupport.o olsupport.o $(IMPORTS)
 # 	(eval '$(SET_LIBRARY_PATH)' ; \
