spr46235: remove -lXpm/-lXp from climxm build
SRI requested this and I will slip it into the build, since 1) we
don't test CLIM and 2) they requested it.

Change-Id: Id0d7564b0039c3188e37ded55b6a3bcd244c5201
Reviewed-on: https://gerrit.franz.com:9080/c/clim2/+/23783
Reviewed-by: Duane Rettig <duane@franz.com>
Reviewed-by: Kevin Layer <layer@franz.com>
Tested-by: Kevin Layer <layer@franz.com>

--- a/Makefile.amd64
+++ b/Makefile.amd64
@@ -17,7 +17,7 @@ endif
 XINCLUDES ?= /usr/include
 XLIBDIR  ?= /usr/lib64
 
-TKLIB=-lXm -lXpm -lXext -lXp
+TKLIB=-lXm -lXext
 XTLIB=-lXt
 XLIB=-lX11
 
