--- a/Makefile.arm64
+++ b/Makefile.arm64
@@ -11,7 +11,7 @@ endif
 XINCLUDES ?= -I/usr/include
 XLIBDIR  ?= /usr/lib64
 
-TKLIB=-lXm -lXpm -lXext -lXp
+TKLIB=-lXm -lXext
 XTLIB=-lXt
 XLIB=-lX11
 
