--- a/Makefile.linuxppc
+++ b/Makefile.linuxppc
@@ -5,7 +5,7 @@ Makefile=Makefile.linuxppc
 
 XINCLUDES=-I/usr/X11R6/include
 
-TKLIB=-lXm -lXpm -lXext -lXp
+TKLIB=-lXm -lXext
 XTLIB=-lXt -lSM -lICE
 XLIB=-lX11
 
