SD-2149: Refactor CLIM foreign interface
Replace defforeign and def-c-type with def-foreign-call and
def-foreign-type, respectively, courtesy of Michael Wessel of SRI

Fix def-foreign-type and def-foreign-call to eliminate lisp warnings.

Add non-Franz path through makefiles to allow CLIM builds with mlisps
or alisps at sites other than Franz Inc.

Add makefile.templates directory and add template makefiles for non-Franz
builds.

Add instructions in Readme.md for use of non-Franz makefile templates.

Remove redundant undefined entry names.

Fix aclpc files to work with ansi or modern mode lisps using in-case-mode forms.

Add run-lisp.sh, a copy of the runlisp.sh in the cl repo.

Change-Id: I22262d1bf577cda597c87505dcb55ba87b2ec591
Reviewed-on: https://gerrit.franz.com:9080/c/clim2/+/27873
Reviewed-by: Duane Rettig <duane@franz.com>
Reviewed-by: Kevin Layer <layer@franz.com>
Tested-by: Kevin Layer <layer@franz.com>

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -6,14 +6,14 @@ CLIM		= clim.dxl
 
 SHARED_EXT = so
 
-LISP	= ../src/lispi$(exe)
-DCL	= dcli
+LISP	?= ../src/lispi$(exe)
+DCL	?= dcli
 
 # Set the case mode when building and dumping an image
 # case_mode:
 #	ansi -- traditional case-insensitive upper-case CL
 #	modern -- case-sensitive lower-case CL
-case_mode = modern
+case_mode ?= modern
 
 ifeq ($(case_mode),ansi)
 CASE_MODE		= :case-insensitive-upper
@@ -38,7 +38,7 @@ ifeq ($(load_patches),no)
 STOP_PATCHES = '(pushnew :clim-dont-load-patches *features*)'
 endif
 
-CL	= $(LISP) -I $(DCL)
+CL	?= $(LISP) -I $(DCL)
 CLOPTS	= -qq -batch -backtrace-on-error -locale japan.euc
 
 RM	= rm
