--- a/Makefile.macos_common
+++ b/Makefile.macos_common
@@ -12,12 +12,16 @@ SHARED-OL-OBJS= climol.dylib
 Makefile=Makefile.macosx
 
 XBASE:=$(shell brew --prefix)
+
+ifdef ATFRANZ
 XTBASE:=$(shell brew --prefix libx11)
 MOTIFBASE:=$(shell brew --prefix openmotif)
+else
+XTBASE:=/opt/homebrew
+MOTIFBASE:=/opt/homebrew
+endif
 
 SET_LIBRARY_PATH = LD_RUN_PATH=$(MOTIFBASE)/lib:$(XBASE)/lib:$(XTBASE)/lib:/lib:/usr/lib; export LD_RUN_PATH
-
-#CL=../src/xm-dcl
 
 # Since the linker hard-codes the truenames of these libraries and
 # loading climxm.dylib fails when users attempt to load it with the
@@ -27,7 +31,11 @@ TKLIB=-L$(MOTIFBASE)/lib -weak-lXm
 XTLIB=-L$(XBASE)/lib -weak-lXt
 XLIB=-weak-lX11
 
+ifdef ATFRANZ
 XINCLUDES= -I$(XBASE)/include -I$(XTBASE)/include -I$(MOTIFBASE)/include
+else
+XINCLUDES=-I/opt/X11/include -I/opt/local/include -I/usr/local/include -I/opt/homebrew/Cellar/openmotif/2.3.8_2/include -I$(MOTIFBASE)/include
+endif
 
 PICFLAGS = 
 SHAREFLAGS = 
@@ -40,6 +48,8 @@ PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
 IMPORTS = stub-x.o stub-xt.o stub-motif.o
 
+ifdef ATFRANZ
 CODESIGN = yes
+endif
 
 include Makefile.generic
